# my_data

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.old.toml  pyproject.toml
.devcontainer/: .bashrc.daryl  .promptname  Dockerfile  devcontainer.json  setup-dev.sh
.github/workflows/: _check-version-tag.yml  _deploy.yml  _integration.yml  _publish_docs.yml  push-to-all-other.yml  push-to-main.yml
docs/source/: conf.py  index.rst
docs/source/api_documentation/: authenticator.rst  class_diagram.rst  data_loader.rst  deleters.rst  my_data.rst  resource_manager.rst  retrievers.rst  updaters.rst
docs/source/api_documentation/my_data/: authorizer.rst  context.rst  context_data.rst  creators.rst  data_manipulator.rst  exceptions.rst  my_data_table_creator.rst
docs/source/api_documentation/my_model/: model.rst
docs/source/examples/: rest_api_service_example.rst
docs/source/model/: index.rst  user_scoped.rst
docs/source/usage/: authentication.rst  authorization.rst  contexts.rst  installation.rst  overview.rst  service_users.rst  setup.rst
docs/source/useful_information/: database_string_examples.rst
src/: requirements.txt
src/database/: __init__.py  database.py  exceptions.py  factories.py
src/my_data/: __init__.py  authenticator.py  authorizer.py  configure.py  context.py  context_data.py  creators.py  crud_base.py  data_loader.py  data_manipulator.py  db_connection.py  db_models.py  deleters.py  exceptions.py  getters.py  my_data.py  my_data_table_creator.py  resource_manager.py  retrievers.py  updaters.py
src/my_model/: __init__.py  model.py
tests/: conftest.py  fixtures_db_creation.py  fixtures_model.py  fixtures_models.py  test_api_client.py  test_api_scope.py  test_api_token.py  test_authenticators.py  test_authorizers.py  test_base_model.py  test_contexts.py  test_creator.py  test_creators.py  test_data.json  test_data_creation.py  test_data_deleting.py  test_data_retrieval.py  test_data_updating.py  test_deleter.py  test_deleters.py  test_getters.py  test_my_data.py  test_mydata_object.py  test_retriever.py  test_service_user.py  test_tag.py  test_updater.py  test_updaters.py  test_users.py
tools/: check-dependency-versions.py
